W-18448288: Changes for spring migration with java upgrade (#270)
* removed nes

* format file

* removed java 8 and 11 from javamodule.java

* spring and java changes with skipped junits

* updated maven extension plugin version

* JavaErrorUtilsTestCase recently migrated to munit

* config update to run test cases with JDK 17

* added munit test suites

* syntax update for java 17

* adoption of parent pom

* Update build.yaml

* Update build.yaml

* Update build.yaml Running pipeline with 4.9.4

* Resolved code review - updated pom to remove common code from parent, updated build file and updated method name

* Resolved code review comment - removed jacoco